Added docs & clearer total

--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <!-- Shows the total sum of all combined dice roll outcomes -->
+    <h1>Dice Total:</h1>
     <h1 id="diceTotal">0</h1>
 
     <!-- Call the JS that will use settings set further down the page -->
