Updated css & js links
They weren't using proper relative links  before - now they are! Should fix issues re: Github Pages/deployment.

--- a/src/index.html
+++ b/src/index.html
@@ -8,10 +8,10 @@
     <title>Dice Roller</title>
 
     <!-- Styling reference example -->
-    <link rel="stylesheet" href="/src/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     
     <!-- JS reference example -->
-    <script src="/src/js/diceroll.js"></script>
+    <script src="./js/diceroll.js"></script>
   </head>
   <body>
     <!-- Shows the total sum of all combined dice roll outcomes -->
